# blog

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lfsconfig  .markdownlint.yaml  .prettierignore  .prettierrc  Dockerfile  README.md  Taskfile.yml  config.yml  devenv.nix  docker-compose.yml  flake.nix  go.mod  go.sum  hugo-slides.toml  hugo.toml  netlify.toml  package-lock.json  package.json
archetype/: post.md  talk.md
archetypes/post-bundle/: index.md
archetypes/talk-bundle/: index.md
assets/js/: fastsearch.js  progress-bar.js
content/: archive.md  search.md  uses.md
content/posts/: 2018-09-03-react-native-expo-with-virtualbox-and-genymotion.md  2018-09-07-debugging-react-native-apps-in-webstorm-and-visual-studio-code.md  2018-10-18-inheritance-in-sqlalchemy-with-flask.md  2020-10-27-how-dns-works-with-docker.md  (+37 more)
content/talks/my-journey-using-docker-as-a-developer-tool/example/: .dockerignore  .gitlab-ci.yml  Dockerfile.multistage  Dockerfile.slim  Dockerfile.ssh  Makefile  pyproject.toml  start.sh
content/talks/my-journey-using-docker-as-a-developer-tool/example/.github/workflows/: branch.yml  main.yml
content/talks/my-journey-using-docker-as-a-developer-tool/example/app/: main.py  models.py
data/: svg.toml
feed2toot/: Dockerfile  feed2toot.db  feed2toot.ini
functions/: commit_status.js  fetch_likes.js  register_likes.js
i18n/: bn.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  hr.yaml  id.yaml  it.yaml  ja.yaml  ko.yaml  ku.yaml  nl.yaml  pt.yaml  zh-tw.yaml  zh.yaml
og/: config.yaml  generate.py
scripts/: add
(+446 files in other folders)
