[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Haseeb Majid <hello@haseebmajid.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
# omnibus = { git = "ssh://git@gitlab.com/banter-bus/omnibus.git", rev = "0.2.5" }
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
